SERVER-11572 permit no-password auth for Windows Kerberos mongo shell from command line